--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   riverpod: ^2.6.1
+  shared_preferences: ^2.3.3
   sqflite: ^2.4.1
   table_calendar: ^3.1.3
 
